src/test/ui/wf/wf-in-fn-type-ret.stderr
error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> $DIR/wf-in-fn-type-ret.rs:9:5
   |
LL | struct MustBeCopy<T:Copy> {
   | ------------------------- required by `MustBeCopy`
...
LL | struct Foo<T> {
   |            - help: consider restricting this bound: `T: std::marker::Copy`
LL |     // needs T: 'static
LL |     x: fn() -> MustBeCopy<T>
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::marker::Copy` is not implemented for `T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
